# urban-meal-delivery

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.txt  README.md  alembic.ini  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
docs/: conf.py  index.rst
migrations/: README.md  env.py  script.py.mako
migrations/versions/: rev_20200806_23_f11cd76d2f45_create_the_database.py  rev_20210102_18_888e352d7526_add_pixel_grid.py  rev_20210106_19_e40623e10405_add_demand_forecasting.py  rev_20210120_16_26711cd3f9b9_add_confidence_intervals_to_forecasts.py  rev_20210123_15_e86290e7305e_remove_orders_from_restaurants_with.py  rev_20210129_11_c2af85bada01_store_actuals_with_forecast.py  rev_20210202_12_8bfb928a31f8_rename_training_horizon_into_train_horizon.py  rev_20210301_16_b4dd0b8903a5_add_distance_matrix.py  rev_20210914_13_81aa304d7a6e_add_simulation_data.py
notebooks/: 00_clean_data.ipynb
research/: 00_r_dependencies.ipynb  01_clean_data.ipynb  02_gridification.ipynb  04_visualizing_restaurants.ipynb  05_visualizing_customers.ipynb  06_tactical_demand_forecasting.ipynb  07_visualizing_demand_forecasting.ipynb  08_google_maps.ipynb  clean_data.ipynb  r_dependencies.ipynb
research/visualizations/: restaurants_in_bordeaux.html  restaurants_in_bordeaux_on_a_grid_with_side_length_1000.html  restaurants_in_lyon.html  restaurants_in_lyon_on_a_grid_with_side_length_1000.html  restaurants_in_paris.html  restaurants_in_paris_on_a_grid_with_side_length_1000.html
src/urban_meal_delivery/: __init__.py  _config.py  configuration.py  console.py  init_r.py
src/urban_meal_delivery/console/: __init__.py  decorators.py  forecasts.py  gridify.py  main.py
src/urban_meal_delivery/db/: __init__.py  addresses.py  addresses_addresses.py  addresses_pixels.py  cities.py  connection.py  couriers.py  customers.py  forecasts.py  grids.py  meta.py  orders.py  pixels.py  restaurants.py
src/urban_meal_delivery/db/replay/: __init__.py  orders.py  simulations.py
src/urban_meal_delivery/db/utils/: __init__.py  colors.py  coordinates.py  locations.py
src/urban_meal_delivery/forecasts/: __init__.py  decomposition.py  timify.py
src/urban_meal_delivery/forecasts/methods/: __init__.py  arima.py  decomposition.py  ets.py  extrapolate_season.py
src/urban_meal_delivery/forecasts/models/: __init__.py  base.py
src/urban_meal_delivery/forecasts/models/tactical/: __init__.py  horizontal.py  other.py  realtime.py  vertical.py
tests/: __init__.py  config.py  conftest.py  test_config.py  test_console.py  test_init_r.py  test_version.py
tests/console/: __init__.py  conftest.py  test_gridify.py  test_main.py
tests/db/: __init__.py  conftest.py  test_addresses.py  test_addresses_addresses.py  test_addresses_pixels.py  test_cities.py  test_couriers.py  test_customer.py  test_forecasts.py  test_grids.py  test_orders.py  test_pixels.py  test_restaurants.py
tests/db/fake_data/: __init__.py  factories.py  fixture_makers.py  static_fixtures.py
tests/db/fake_data/factories/: __init__.py  addresses.py  couriers.py  customers.py  restaurants.py  utils.py
tests/db/fake_data/factories/orders/: __init__.py  ad_hoc.py  replayed.py  scheduled.py
tests/db/replay/: __init__.py  test_orders.py  test_simulations.py
tests/db/utils/: __init__.py  test_coordinates.py  test_locations.py
tests/forecasts/: __init__.py  conftest.py  test_decomposition.py  test_methods.py  test_models.py  test_timify.py
tests/forecasts/methods/: __init__.py  test_decomposition.py  test_predictions.py  test_ts_methods.py
tests/forecasts/timify/: __init__.py  conftest.py  test_aggregate_orders.py  test_avg_daily_demand.py  test_make_time_series.py  test_order_history.py
